# img2webp_img2avif

./: README.md
apng/apng2webp/apng2webp_dependencies/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
apng2webp/: apng2webp.c  apng2webp.c20230714  apng2webp_av.cpp  apngtoweb.c  jpeg2webp.c
apng2webp/bad/: a.out  a2w.c  a2w1.c  a2w1.out  a2w1.outf  a2w2.c  a2w2.out  aaa.out  aac2.webp.back  apng2gif.c  apng2gif.out  apng2webp.cpp  apng2webp0.cpp  apng2webp1.c  apng2webp2.c  apng2webp3.c  apng2webp4.c  apng2webp5.c  apng2webp6.c  avweb1.cpp  avwebp.cpp  b.out  googdback.c  iautowebp.c  make.sh  readpng.c
ffmpeg-6.0/: config.h  config_components.h
ffmpeg-6.0/doc/: config.texi  ffmpeg-bitstream-filters.1  ffmpeg-codecs.html  ffmpeg-filters.1  ffmpeg-protocols.html  ffmpeg-utils.1  print_options
ffmpeg-6.0/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-6.0/libavcodec/: libavcodec.pc
ffmpeg-6.0/libavdevice/: libavdevice.pc
ffmpeg-6.0/libavfilter/: libavfilter.pc
giflib-5.2.1/: Makefile  gif2rgb  gifbg  gifcolor  gifecho  giffilter  giffix  gifhisto  gifinto  gifsponge  gifwedge
giflib521/lib/: libgif.so.7.2.0
jpeg-9e/: Makefile  cjpeg  config.status  djpeg  jpegtran  libjpeg.la  libjpeg.pc  libtool  rdjpgcom  wrjpgcom
jpeg-9e/.libs/: cjpeg  djpeg  jpegtran
jpeg9e/lib/: libjpeg.la  libjpeg.so.9.5.0
libavif-0.11.1/: CMakeLists.txt  gcc550.sh
libavif-0.11.1/apps/: apng2avif.c  libpng16.so.16  o1.apng  o1.avif  o11.avif  o2.avif  o4.avif  o7.avif  png2avif.c  png2avif1.c  png2avif2.c  png2avif3.c  png2avif4.c  png2avif5.c  png2avif5good.c  png2avif6.c  png2avif7.c  xavifdec.c  xavifenc.c
libgd-2.3.2/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
libgd-2.3.2/config/: Makefile  Makefile.in  gdlib.pc
libgd-2.3.2/src/: Makefile  Makefile.in  config.h  gd.lo  gd2copypal  gd2togif  gd2topng  gd_avif.lo  gd_bmp.lo  gd_color.lo  gd_color_map.lo  gd_color_match.lo  gd_crop.lo  gd_filename.lo  gd_filter.lo  gd_gd.lo  gd_gd2.lo  gd_gif_in.lo  gd_gif_out.lo  gd_heif.lo  gd_interpolation.lo  gd_io.lo  gd_io_dp.lo  gd_io_file.lo  gd_io_ss.lo  gd_jpeg.lo  gd_matrix.lo  gd_nnquant.lo  gd_png.lo  gd_rotate.lo  gd_security.lo  gd_ss.lo  gd_tga.lo  gd_tiff.lo  gd_topal.lo  gd_transform.lo  gd_version.lo  gd_wbmp.lo  (+23 more)
libpng-1.6.39/: png.c
libwebp-1.3.1/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
tiff-4.5.1/: Makefile  config.status  libtool
(+1145 files in other folders)
